# NLP2

./: .gitignore  README.md
TP1/: Otras_pruebas.ipynb  TP1-TinyGPT.ipynb  TinyGPT.ipynb  TinyGPT.md  trainer.py
TP2/: README.md  app.py  config.py  llm_client.py  memory.py  pyproject.toml
TP2/rag/: pdf_ingest.py  pinecone_client.py  retriever.py
TP3/: README.md  app.py  config.py  llm_client.py  main.py  memory.py  pyproject.toml
TP3/rag/: metadata_extractor.py  multi_agent_orchestrator.py  pdf_ingest.py  person_agent.py  retriever.py  router_agent.py
