[project]
name = "tp2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.0",
    "langchain-pinecone>=0.2.0",
    "pinecone==6.0.0",
    "pypdf>=6.4.1",
    "streamlit>=1.52.1",
]
